Armado de estructura

--- a/index.html
+++ b/index.html
@@ -1,12 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KiKDraS</title>
+    <title>Porfolio - Anahí Foresi</title>
+    <link rel="stylesheet" href="bootstrap/bootstrap.min.css">
+    <link rel="stylesheet" href="styles/main.css">
 </head>
-<body>
-    <h1>Hosting GitHub</h1>
+<body class="container-fluid overflow-hidden">
+    <header>
+        <img id="tituloPortfolio" class="col-12 col-md-4" src="images/portfolio/tituloPortfolio.png" alt="">
+    </header>
+    <main>
+        <section id="portfolio" class="row row-cols-1 row-cols-md-2 m-4">
+            <section id="datos" class="col-12 col-md-4">                
+                <div>
+                    <img src="images/portfolio/polariodRotada.png" alt="">
+                    <ul>
+                        <li></li>
+                    </ul>
+                </div>
+            </section>
+            <section id="muestras" class="col-12 col-md-8">
+                <img src="images/portfolio/polariod.png" alt="">
+            </section>
+        </section>        
+        <footer></footer>
+    </main>    
+    <script src="bootstrap/bootstrap.bundle.min.js"></script>
+    <script src="js/jquery-3.6.0.min.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
