--- a/index.html
+++ b/index.html
@@ -8,26 +8,37 @@
     <link rel="stylesheet" href="bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="styles/main.css">
 </head>
-<body class="container-fluid overflow-hidden">
-    <header>
-        <img id="tituloPortfolio" class="col-12 col-md-4" src="images/portfolio/tituloPortfolio.png" alt="">
-    </header>
-    <main>
-        <section id="portfolio" class="row row-cols-1 row-cols-md-2 m-4">
-            <section id="datos" class="col-12 col-md-4">                
-                <div>
-                    <img src="images/portfolio/polariodRotada.png" alt="">
-                    <ul>
-                        <li></li>
-                    </ul>
-                </div>
-            </section>
-            <section id="muestras" class="col-12 col-md-8">
-                <img src="images/portfolio/polariod.png" alt="">
-            </section>
-        </section>        
-        <footer></footer>
-    </main>    
+<body class="container-fluid ">
+    <div id="contenedor">
+        <header>
+            <img id="tituloPortfolio" class="col-12 col-md-4" src="images/portfolio/tituloPortfolio.png" alt="">
+        </header>
+        <main>
+            <section id="portfolio" class="row row-cols-1 row-cols-md-2">
+                <section id="datos" class="col-12 col-md-4 p-4">                
+                    <div>
+                        <img src="images/portfolio/polariodRotada.webp" alt="">
+                        <ul>
+                            <li></li>
+                        </ul>
+                    </div>
+                </section>
+                <section id="muestras" class="col-12 col-md-8">
+                    <div class="row p-2 justify-content-between">
+                        <img src="images/portfolio/polariod.png" alt="" class="col-4">
+                        <img src="images/portfolio/polariod.png" alt="" class="col-4">
+                        <img src="images/portfolio/polariod.png" alt="" class="col-4">
+                    </div>
+                    <div class="row p-2 justify-content-between">
+                        <img src="images/portfolio/polariod.png" alt="" class="col-4">
+                        <img src="images/portfolio/polariod.png" alt="" class="col-4">
+                        <img src="images/portfolio/polariod.png" alt="" class="col-4">
+                    </div>
+                </section>
+            </section>        
+            <footer></footer>
+        </main>
+    </div>    
     <script src="bootstrap/bootstrap.bundle.min.js"></script>
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/main.js"></script>
